--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -96,7 +96,8 @@
                 android:id="@+id/imageView10"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                app:srcCompat="@drawable/message" />
+                app:srcCompat="@drawable/message"
+                android:onClick="mainClick2"/>
 
             <TextView
                 android:id="@+id/textView4"
@@ -116,6 +117,7 @@
                 android:id="@+id/imageView11"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:onClick="mainClick3"
                 app:srcCompat="@drawable/person" />
 
             <TextView
