--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="100dp"
-            app:srcCompat="@drawable/twiter" />
+            app:srcCompat="@drawable/twiterinbar" />
 
     </LinearLayout>
 
