--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/back"
+            app:srcCompat="@drawable/backarrow"
             android:onClick="mainClick"
             android:layout_marginRight="100dp"/>
 
@@ -104,7 +104,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/forword"/>
+                    android:src="@drawable/forwordarrow"/>
 
             </LinearLayout>
             <View
@@ -204,7 +204,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/forword"/>
+                    android:src="@drawable/forwordarrow"/>
 
             </LinearLayout>
             <View
@@ -238,7 +238,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/forword"/>
+                    android:src="@drawable/forwordarrow"/>
 
             </LinearLayout>
             <View
