--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.148"
-        android:layout_marginRight="8dp">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,8 +46,8 @@
 
         <ScrollView
             style="@android:style/Widget.DeviceDefault.Light.ScrollView"
-            android:layout_width="372dp"
-            android:layout_height="584dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -135,6 +135,7 @@
             android:id="@+id/button2"
             android:layout_width="65dp"
             android:layout_height="match_parent"
+            android:onClick="mainClick1"
             android:background="@drawable/explore" />
 
         <Button
@@ -142,6 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="mainClick2"
             android:background="@drawable/noti" />
 
         <Button
