--- a/app/src/main/res/layout/activity_me.xml
+++ b/app/src/main/res/layout/activity_me.xml
@@ -123,6 +123,7 @@
             android:id="@+id/button18"
             android:layout_width="69dp"
             android:layout_height="52dp"
+            android:onClick="mainClick1"
             android:background="@drawable/explore" />
 
         <Button
@@ -135,6 +136,7 @@
             android:id="@+id/button20"
             android:layout_width="80dp"
             android:layout_height="48dp"
+            android:onClick="mainClick2"
             android:background="@drawable/mesage" />
 
         <Button
