--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -123,12 +123,14 @@
             android:id="@+id/button18"
             android:layout_width="69dp"
             android:layout_height="52dp"
+            android:onClick="mainClick1"
             android:background="@drawable/explore" />
 
         <Button
             android:id="@+id/button19"
             android:layout_width="73dp"
             android:layout_height="50dp"
+            android:onClick="mainClick2"
             android:background="@drawable/noti" />
 
         <Button
