with all connections

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,7 @@
             android:id="@+id/button"
             android:layout_width="61dp"
             android:layout_height="wrap_content"
+            android:onClick="mainClick3"
             android:background="@drawable/home" />
 
         <Button
