--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -74,6 +74,7 @@
                 android:id="@+id/imageView6"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:onClick="mainClick5"
                 app:srcCompat="@drawable/home" />
 
             <TextView
