--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -104,12 +104,14 @@
             android:textSize="18sp"
             android:textColor="#1DA1F3"
             android:text="Forgot password?"
+            android:onClick="mainClick1"
             android:layout_marginRight="100dp"/>
         <Button
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="mainClick"
             android:text="Login"
             />
     </LinearLayout>
