--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,12 @@
         app:layout_constraintVertical_bias="0.148"
         >
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
 
             <TextView
                 android:id="@+id/textView13"
@@ -44,68 +46,85 @@
                 app:srcCompat="@drawable/screeng" />
         </LinearLayout>
 
-        <ScrollView
-            style="@android:style/Widget.DeviceDefault.Light.ScrollView"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="186dp"
+                android:text="Talk privately with anyone who follows you."
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <EditText
+                android:id="@+id/editText5"
+                android:layout_width="match_parent"
+                android:layout_height="68dp"
+                android:background="#bdc3c7"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Suggested users" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="68dp"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="214dp"
-                    android:text="Talk privately with anyone who follows you."
-                    android:textAlignment="center"
-                    android:textSize="24sp" />
-
-                <Button
-                    android:id="@+id/button6"
-                    android:layout_width="match_parent"
-                    android:layout_height="63dp"
-                    android:text="Suggested users"
-                   />
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="102dp"
+                    android:layout_height="60dp"
+                    app:srcCompat="@drawable/g" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="261dp"
+                        android:layout_height="wrap_content"
+                        android:text="STM"
+
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
                     <ImageView
-                        android:id="@+id/imageView6"
-                        android:layout_width="102dp"
-                        android:layout_height="60dp"
-                        app:srcCompat="@drawable/g" />
+                        android:id="@+id/imageView7"
+                        android:layout_width="88dp"
+                        android:layout_height="27dp"
+                        app:srcCompat="@drawable/gg" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:weightSum="1">
 
-                        <TextView
-                            android:id="@+id/textView4"
-                            android:layout_width="261dp"
-                            android:layout_height="wrap_content"
-                            android:text="STM"
-
-                            android:textSize="30sp"
-                            android:textStyle="bold" />
-
-                        <ImageView
-                            android:id="@+id/imageView7"
-                            android:layout_width="88dp"
-                            android:layout_height="27dp"
-                            app:srcCompat="@drawable/gg" />
-
-                    </LinearLayout>
                 </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="154dp"
+                android:background="#bdc3c7"
+                android:orientation="horizontal">
+
+
+
+
 
             </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
+
 
     </LinearLayout>
 
