--- a/app/src/main/res/layout/activity_me.xml
+++ b/app/src/main/res/layout/activity_me.xml
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@drawable/boaderleft"
                 android:text="Tweets"
                 android:textColor="#3498db" />
 
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@drawable/fullbuttonboader"
                 android:onClick="mainClick"
                 android:text="Media"
                 android:textColor="#3498db" />
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#3498db"
+                android:background="@drawable/rightboader"
                 android:text="Likes"
                 android:textColor="#fff" />
         </LinearLayout>
