--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@drawable/boaderleft"
                 android:text="Tweets"
                 android:textColor="#3498db" />
 
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#fff"
+                android:background="@drawable/boader"
                 android:text="Likes"
                 android:textColor="#3498db" />
         </LinearLayout>
