--- a/app/src/main/res/layout/activity_twitter.xml
+++ b/app/src/main/res/layout/activity_twitter.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context="com.example.a1691661.twitter.twitter">
 
 
@@ -18,7 +19,7 @@
         android:layout_marginTop="8dp"
         android:id="@+id/linearLayout2"
         android:weightSum="1"
-        android:layout_marginBottom="8dp">
+        android:layout_marginEnd="16dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -45,6 +46,28 @@
             app:srcCompat="@drawable/leaf" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:id="@+id/view6"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.616"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:id="@+id/view8"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.616"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -81,6 +104,7 @@
                 android:text="Home" />
 
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -187,8 +211,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <LinearLayout
+                android:id="@+id/h1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -217,7 +241,7 @@
                             android:textSize="16dp" />
 
                         <ImageView
-                            android:id="@+id/imageView13"
+                            android:id="@+id/imageView25"
                             android:layout_width="47dp"
                             android:layout_height="wrap_content"
                             app:srcCompat="@drawable/right" />
@@ -226,9 +250,10 @@
                             android:id="@+id/textView7"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="FarOutAkhtar.34s" />
+                            android:text="\@FarOutAkhtar.34s" />
+
                         <ImageView
-                            android:id="@+id/imageView13"
+                            android:id="@+id/imageView30"
                             android:layout_width="47dp"
                             android:layout_height="wrap_content"
                             app:srcCompat="@drawable/line" />
@@ -253,10 +278,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Peace out.." />
+
                     <ImageView
-                        android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:src="@drawable/image"/>
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/image" />
 
                     />
 
@@ -299,9 +325,17 @@
 
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:id="@+id/view7" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/h2"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -337,7 +371,7 @@
                             android:id="@+id/textView16"
                             android:layout_width="132dp"
                             android:layout_height="wrap_content"
-                            android:text="LoblawsON" />
+                            android:text="\@LoblawsON" />
                         <ImageView
                             android:id="@+id/imageView13"
                             android:layout_width="47dp"
@@ -363,10 +397,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="we did to help one person help others." />
+
                     <ImageView
-                        android:layout_height="wrap_content"
+                        android:id="@+id/imageView14"
                         android:layout_width="wrap_content"
-                        android:src="@drawable/iaa"/>
+                        android:layout_height="wrap_content"
+                        android:onClick="mainClick3"
+                        android:src="@drawable/iaa" />
 
                     />
 
@@ -409,6 +446,12 @@
 
 
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:id="@+id/view9"
+                ></View>
         </LinearLayout>
     </ScrollView>
 
