--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,12 @@
     tools:context="com.example.a1691661.twitter.loginpage">
 
     <LinearLayout
-        android:layout_width="375dp"
+        android:layout_width="0dp"
         android:layout_height="516dp"
 
 
         android:orientation="vertical"
 
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -34,12 +33,14 @@
                 android:layout_height="46dp"
                 android:layout_weight="1.29"
                 android:text="  Messages"
+                android:textColor="#000"
+                android:textStyle="bold"
 
                 android:textAlignment="center"
                 android:textSize="24sp" />
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/image245View8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.15"
@@ -59,9 +60,9 @@
                 android:background="@android:color/darker_gray" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textView254"
                 android:layout_width="wrap_content"
-                android:layout_height="186dp"
+                android:layout_height="130dp"
                 android:text="Talk privately with anyone who follows you."
                 android:textAlignment="center"
                 android:textSize="24sp" />
@@ -69,7 +70,8 @@
             <EditText
                 android:id="@+id/editText5"
                 android:layout_width="match_parent"
-                android:layout_height="68dp"
+                android:layout_height="39dp"
+                android:layout_weight="0.72"
                 android:background="#bdc3c7"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -81,7 +83,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/imageView65"
                     android:layout_width="102dp"
                     android:layout_height="60dp"
                     app:srcCompat="@drawable/g" />
@@ -103,7 +105,7 @@
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:id="@+id/imageView7"
+                        android:id="@+id/imageView78"
                         android:layout_width="88dp"
                         android:layout_height="27dp"
                         app:srcCompat="@drawable/gg" />
@@ -116,7 +118,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="154dp"
                 android:background="#bdc3c7"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_weight="0.63">
 
 
 
@@ -129,56 +132,109 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="359dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="61dp"
-            android:layout_height="wrap_content"
-            android:onClick="mainClick3"
-            android:background="@drawable/home" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="65dp"
-            android:layout_height="match_parent"
-            android:onClick="mainClick1"
-            android:background="@drawable/explore" />
-
-        <Button
-            android:id="@+id/button3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/linearLayout"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="mainClick2"
-            android:background="@drawable/noti" />
-
-        <Button
-            android:id="@+id/button4"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick"
+                app:srcCompat="@drawable/hoooooo" />
+            <TextView
+                android:id="@+id/text20View"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="Home" />
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/mesage" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="54dp"
-            android:layout_height="41dp"
-            android:background="@drawable/me"
-            android:onClick="mainClick" />
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/sear"
+                android:onClick="mainClick1"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Explore"
+                android:textAlignment="center"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:textAlignment="center">
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="mainClick2"
+                app:srcCompat="@drawable/not" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notification"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick3"
+                app:srcCompat="@drawable/messagge" />
+            <TextView
+                android:id="@+id/text23View4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Message"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/person"
+                android:onClick="mainClick4"/>
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Me"
+                android:textAlignment="center"/>
+        </LinearLayout>
     </LinearLayout>
 
 
