--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:onClick="mainClick4"
-                app:srcCompat="@drawable/home" />
+                app:srcCompat="@drawable/hraj" />
 
             <TextView
                 android:id="@+id/textView"
