--- a/app/src/main/res/layout/activity_me.xml
+++ b/app/src/main/res/layout/activity_me.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context="com.example.a1691661.twitter.me">
 
     <LinearLayout
@@ -15,6 +16,7 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_editor_absoluteX="4dp">
 
@@ -69,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/fullbuttonboader"
-                android:onClick="mainClick"
+                android:onClick="mainClick5"
                 android:text="Media"
                 android:textColor="#3498db" />
 
@@ -95,7 +97,8 @@
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
-                    android:layout_height="474dp"
+                    android:layout_height="395dp"
+                    android:background="#E6EBF1"
                     app:srcCompat="@drawable/pic" />
             </LinearLayout>
         </ScrollView>
@@ -104,47 +107,108 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="51dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent">
-
-        <Button
-            android:id="@+id/button17"
-            android:layout_width="74dp"
-            android:layout_height="51dp"
-            android:onClick="mainClick3"
-            android:background="@drawable/home" />
-
-        <Button
-            android:id="@+id/button18"
-            android:layout_width="69dp"
-            android:layout_height="52dp"
-            android:onClick="mainClick1"
-            android:background="@drawable/explore" />
-
-        <Button
-            android:id="@+id/button19"
-            android:layout_width="73dp"
-            android:layout_height="50dp"
-            android:background="@drawable/noti" />
-
-        <Button
-            android:id="@+id/button20"
-            android:layout_width="80dp"
-            android:layout_height="48dp"
-            android:onClick="mainClick2"
-            android:background="@drawable/mesage" />
-
-        <Button
-            android:id="@+id/button21"
-            android:layout_width="71dp"
-            android:layout_height="52dp"
-            android:background="@drawable/me" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/linearLayout"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick"
+                app:srcCompat="@drawable/hoooooo" />
+            <TextView
+                android:id="@+id/text20View"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="Home" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/sear"
+                android:onClick="mainClick1"/>
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Explore"
+                android:textAlignment="center"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:textAlignment="center">
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick2"
+                app:srcCompat="@drawable/notification" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notifications"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick3"
+                app:srcCompat="@drawable/message" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Message"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/men"
+                android:onClick="mainClick4"/>
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Me"
+                android:textAlignment="center"/>
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
