--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -7,16 +7,17 @@
     tools:context="com.example.a1691661.twitter.Media">
 
     <LinearLayout
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="587dp"
         android:orientation="vertical"
         android:weightSum="1"
-        tools:layout_editor_absoluteY="0dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteX="4dp">
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#3498db"
-                android:onClick="mainClick"
+                android:onClick="mainClick6"
                 android:text="Media"
                 android:textColor="#fff" />
 
@@ -79,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/boader"
+                android:onClick="mainClick5"
                 android:text="Likes"
                 android:textColor="#3498db" />
         </LinearLayout>
@@ -94,8 +96,9 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="474dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="461dp"
+                    android:background="#E6EBF1"
                     app:srcCompat="@drawable/pic" />
             </LinearLayout>
         </ScrollView>
@@ -104,47 +107,112 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="51dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/linearLayout"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick"
+                app:srcCompat="@drawable/hoooooo" />
+            <TextView
+                android:id="@+id/text20View"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="Home" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
 
-        <Button
-            android:id="@+id/button17"
-            android:layout_width="74dp"
-            android:layout_height="51dp"
-            android:onClick="mainClick3"
-            android:background="@drawable/home" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick1"
+                app:srcCompat="@drawable/sear" />
 
-        <Button
-            android:id="@+id/button18"
-            android:layout_width="69dp"
-            android:layout_height="52dp"
-            android:onClick="mainClick1"
-            android:background="@drawable/explore" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Explore"
+                android:textAlignment="center"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:textAlignment="center">
 
-        <Button
-            android:id="@+id/button19"
-            android:layout_width="73dp"
-            android:layout_height="50dp"
-            android:onClick="mainClick2"
-            android:background="@drawable/noti" />
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick2"
+                app:srcCompat="@drawable/notification" />
 
-        <Button
-            android:id="@+id/button20"
-            android:layout_width="80dp"
-            android:layout_height="48dp"
-            android:background="@drawable/mesage" />
-
-        <Button
-            android:id="@+id/button21"
-            android:layout_width="71dp"
-            android:layout_height="52dp"
-            android:background="@drawable/me" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notifications"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:onClick="mainClick3"
+                app:srcCompat="@drawable/messagge" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Message"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/person"
+                android:onClick="mainClick4"/>
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Me"
+                android:textAlignment="center"/>
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
