--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,10 +70,9 @@
             <EditText
                 android:id="@+id/editText5"
                 android:layout_width="match_parent"
-                android:layout_height="39dp"
-                android:layout_weight="0.72"
+                android:layout_height="wrap_content"
                 android:background="#bdc3c7"
-                android:ems="10"
+                android:padding="20dp"
                 android:inputType="textPersonName"
                 android:text="Suggested users" />
 
@@ -116,10 +115,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="154dp"
+                android:layout_height="wrap_content"
                 android:background="#bdc3c7"
                 android:orientation="horizontal"
-                android:layout_weight="0.63">
+                android:layout_weight="2.37">
 
 
 
