--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -18,6 +18,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
+        android:padding="10dp"
         android:id="@+id/linearLayout2"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp">
@@ -151,7 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="5dp">
 
                 <TextView
                     android:id="@+id/textView2"
@@ -249,17 +250,26 @@
                 android:layout_marginBottom="10dp"
                 android:background="@android:color/darker_gray"
                 tools:layout_editor_absoluteY="0dp"></View>
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Learn more"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:layout_marginRight="150dp"
-                android:textColor="#1DA1F3"
-                android:padding="10dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:orientation="horizontal"
+                android:background="#E6EBF1"
+                android:layout_weight="3.41">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="150dp"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:text="Learn more"
+                    android:textColor="#1DA1F3"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
