--- a/app/src/main/res/layout/activity_twitter.xml
+++ b/app/src/main/res/layout/activity_twitter.xml
@@ -83,6 +83,7 @@
                 android:id="@+id/imageView6"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:onClick="mainClick"
                 app:srcCompat="@drawable/homekk" />
 
             <TextView
@@ -106,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 app:srcCompat="@drawable/sear"
-                android:onClick="mainClick"/>
+                android:onClick="mainClick1"/>
 
             <TextView
                 android:id="@+id/textView2"
@@ -129,7 +130,7 @@
                 android:id="@+id/imageView8"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:onClick="mainClick1"
+                android:onClick="mainClick2"
                 app:srcCompat="@drawable/not" />
 
             <TextView
@@ -227,6 +228,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Farhan Akthar"
+                            android:textColor="#000"
                             android:textSize="16dp" />
 
                         <ImageView
@@ -239,6 +241,7 @@
                             android:id="@+id/textView7"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="#000"
                             android:text="\@FarOutAkhtar.34s" />
 
                         <ImageView
@@ -254,23 +257,28 @@
                         android:id="@+id/textView9"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="#000"
                         android:text="Tomorrow will be the best day of your" />
 
                     <TextView
                         android:id="@+id/textView10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="#000"
                         android:text="life...if you make it count." />
 
                     <TextView
                         android:id="@+id/textView11"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Peace out.." />
+                        android:text="Peace out.."
+                        android:textColor="#000"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
                         android:src="@drawable/image" />
 
                     />
@@ -278,7 +286,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="5dp">
 
                         <ImageView
                             android:id="@+id/imageView18"
@@ -348,6 +357,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Loblaws"
+                            android:textColor="#000"
                             android:textSize="16dp" />
 
                         <ImageView
@@ -359,6 +369,7 @@
                         <TextView
                             android:id="@+id/textView16"
                             android:layout_width="132dp"
+                            android:textColor="#000"
                             android:layout_height="wrap_content"
                             android:text="\@LoblawsON" />
                         <ImageView
@@ -373,25 +384,29 @@
                         android:id="@+id/textView17"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="#000"
                         android:text="Giving back and saying thanks are what" />
 
                     <TextView
                         android:id="@+id/textView18"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="#000"
                         android:text="#MarketMoments are all about. See what" />
 
                     <TextView
                         android:id="@+id/textView19"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="#000"
                         android:text="we did to help one person help others." />
 
                     <ImageView
                         android:id="@+id/imageView14"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:onClick="mainClick3"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
                         android:src="@drawable/iaa" />
 
                     />
@@ -399,7 +414,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="5dp">
 
                         <ImageView
                             android:id="@+id/imageView34"
